# MyInherintanceHomework

MyInherintanceHomework/: CMakeLists.txt  DeviceBaseClass.cpp  DeviceBaseClass.h  DeviceDisplay.cpp  DeviceDisplay.h  DeviceMouse.cpp  DeviceMouse.h  DeviceTouchPad.cpp  DeviceTouchPad.h  MyDeviceUI.cpp  MyDeviceUI.h  main.cpp
